k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: your-dockerhub-username/your-flask-app-image:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app/downloads
          name: flask-app-storage
      volumes:
      - name: flask-app-storage
        persistentVolumeClaim:
          claimName: flask-app-pvc
